[gd_scene load_steps=2 format=3 uid="uid://can22dewncoui"]

[ext_resource type="Script" path="res://addons/fast_gamestates/docks/fast_game_states_settings.gd" id="1_wiat2"]

[node name="GameStates Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wiat2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Rootnode_Settings" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Rootnode_Settings"]
layout_mode = 2
text = "Rootnode"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/Rootnode_Settings"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Rootnode name"
scroll_fit_content_height = true

[node name="StartupMenu_Settings" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/StartupMenu_Settings"]
layout_mode = 2
text = "Startup Menu"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/StartupMenu_Settings"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Startup Menu Name"
scroll_fit_content_height = true

[node name="LoadGameOnStartup_Settings" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/LoadGameOnStartup_Settings"]
layout_mode = 2
size_flags_vertical = 1
text = "Gamecontroler"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/LoadGameOnStartup_Settings"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/LoadGameOnStartup_Settings/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Path to Gamecontroler"
scroll_fit_content_height = true

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/LoadGameOnStartup_Settings/VBoxContainer"]
layout_mode = 2
text = "Load on startup"

[node name="GameSettingsPath_Settings" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/GameSettingsPath_Settings"]
layout_mode = 2
text = "Game settings path"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/GameSettingsPath_Settings"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Path to game settings"
scroll_fit_content_height = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="text_changed" from="VBoxContainer/Rootnode_Settings/TextEdit" to="." method="_schedule_save"]
[connection signal="text_changed" from="VBoxContainer/StartupMenu_Settings/TextEdit" to="." method="_schedule_save"]
[connection signal="text_changed" from="VBoxContainer/LoadGameOnStartup_Settings/VBoxContainer/TextEdit" to="." method="_schedule_save"]
[connection signal="toggled" from="VBoxContainer/LoadGameOnStartup_Settings/VBoxContainer/CheckBox" to="." method="_schedule_save" unbinds=1]
[connection signal="text_changed" from="VBoxContainer/GameSettingsPath_Settings/TextEdit" to="." method="_schedule_save"]
